[package]
name = "pdx-syntax"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Paradox script/localization syntax parser."
readme = "README.md"
authors = ["Halifuda"]
keywords = ["paradox", "parser", "game", "tools"]
repository = "https://github.com/Halifuda/pdx-syntax"
documentation = "https://docs.rs/pdx-syntax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Syntax handler.
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
# Sadly paradox add some BOM encoding in its files.
strip_bom = "1.0"
# Serilization for FFI.
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
lalrpop = "0.20.0"

[[example]]
name = "single_script"

[[example]]
name = "all_scripts"

[[example]]
name = "single_loc"

[[example]]
name = "all_loc"
